@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-18T16:08:45Z",
-  "count_outdated" : 1660,
-  "uniques_outdated" : 475,
-  "count" : 1695,
-  "uniques" : 493,
+  "timestamp" : "2022-07-19T00:38:38Z",
+  "count_outdated" : 1664,
+  "uniques_outdated" : 477,
+  "count" : 1698,
+  "uniques" : 494,
   "clones" : [
-    {
-      "timestamp": "2022-07-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-07-05T00:00:00Z",
       "count": 3,
